--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,8 @@ jobs:
       - browser-tools/install-chromedriver
       - attach_workspace:
           at: ~/
-      - cypress/run:
+      - cypress/run-tests:
           cypress-command: npx cypress run --browser chrome
-          install-browsers: true
-          start-command: npm run start:dev
   run-on-firefox:
     executor: cypress/default
     steps:
