--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
   run-on-firefox:
     executor: cypress/default
     steps:
+      - browser-tools/install-firefox
+      - browser-tools/install-firefoxriver
       - attach_workspace:
           at: ~/
       - cypress/run-tests:
